# PrintAudit

./: .pre-commit-config.yaml  README.md  printaudit.conf.sample  pyproject.toml
.github/workflows/: publish.yml
docs/: analysis_modules.md  creating_output_modules.md  cups_page_log_fomart.txt  logrotate_setup.md  report_example.html  report_example.txt
src/printaudit/: __init__.py  __main__.py  cli.py  config.py  emailer.py  parser.py  reporting.py
src/printaudit/analysis/: __init__.py  aggregator.py
src/printaudit/outputs/: __init__.py  base.py  cli.py  csv_writer.py  email_sender.py  html_report.py
tests/: README.md  __init__.py  conftest.py  test_aggregator.py  test_config.py  test_email_output.py  test_integration.py  test_parser.py
